--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.8.1</version>
             <configuration>
+		<skipTests>true</skipTests>
                 <source>1.8</source>
                 <target>1.8</target>
             </configuration>
